--- a/android/src/main/res/layout/device_list.xml
+++ b/android/src/main/res/layout/device_list.xml
@@ -24,6 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+
                 <LinearLayout
                     android:id="@+id/my_devices_tab"
                     android:layout_width="match_parent"
@@ -67,6 +68,18 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/my_device_name" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/settings_tab"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <include
+                        layout="@layout/settings"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
 
             </FrameLayout>
